--- a/i3/config
+++ b/i3/config
@@ -76,7 +76,7 @@ bindsym $mod+Shift+Right move right
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
 # change focus between tiling / floating windows
