Changed local time to be compatible with RPM changelog entries.

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -32,7 +32,7 @@ memory {
 
 tztime BR {
     timezone = "America/Sao_Paulo"
-    format = " BR %H:%M | %d/%b "
+    format = " BR %H:%M | %a %b %d "
 }
 
 tztime EU {
