Commented out fan speed reporting.

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -63,10 +63,10 @@ cpu_temperature 0 {
     path = "/sys/class/thermal/thermal_zone0/temp"
 }
 
-read_file FAN {
-    format = "%content rpm"
-    path = "/sys/class/hwmon/hwmon5/fan1_input"
-}
+# read_file FAN {
+#     format = "%content rpm"
+#     path = "/sys/class/hwmon/hwmon5/fan1_input"
+# }
 
 load {
     format = " %5min 5min "
